# BayesianFlowNet

./: .gitignore  README.md  accel_ddp.py  ddp_dynamo.yaml  ddp_dynamo_bf16.yaml  debug.ipynb  debug_nan.ipynb  dynamo.yaml  fsdp2.py  fsdp2_dynamo.yaml  fsdp2_dynamo_mlp.yaml  hm.ipynb  hrm.ipynb  inference.ipynb  inference.py  main.py  nonfsdp.py  pyproject.toml  requirements.txt  schedule_debug.ipynb  train_script.py  train_script_dion.py  train_script_gram.py  train_script_learnt.py  train_script_learnt_fourier.py  train_script_mlp.py  train_script_mlp_synth.py  train_script_sqrt.py  various_exp.ipynb
exp/: Bayesian_Canadian.ipynb  Bayesian_Flow_Model_Continuous.ipynb  Bayesian_Flow_Network_Discrete.ipynb  Bayesian_Mocks.ipynb  ass_scan.ipynb  ass_scan2.ipynb  bfn_continuous.ipynb  block_mask.ipynb  chembfn_schedule.ipynb  col.ipynb  compile.ipynb  dimension_splitting.ipynb  dion.ipynb  divergence.ipynb  flash_linear.ipynb  flex.ipynb  h-net-mamba.ipynb  h-net.ipynb  learned_beta.ipynb  learned_beta_baseline.ipynb  learned_beta_v1.ipynb  learned_beta_v2.ipynb  learned_beta_v2_gridsearch.ipynb  learned_beta_v2_gridsearchgpu1.ipynb  loss_batch_norm.ipynb  loss_fn.ipynb  loss_grad.ipynb  mask_selection.ipynb  only_betas.ipynb  positions.ipynb  seq_inference_test.ipynb  shakespeare.ipynb  shakespeare_training_setup.ipynb  shifty.ipynb  small.ipynb  spda.ipynb  stop_energy_over_fixed.ipynb  testing_collate_fn.ipynb  various_losses.ipynb  what_does_this_mean.ipynb  (+1 more)
src/checkpointing/: checkpointing.py
src/common/: data_prep.py  data_prep_types.py  sequence.py  types.py
(+49 files in other folders)
