[project]
name = "bayesianflownet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch ; sys_platform == 'linux'",
    "torchvision ; sys_platform == 'linux'",
    "pytorch-triton-rocm ; sys_platform == 'linux'",
    "torch>=2.9.0",
    "ipywidgets>=8.1.7",
    "pytest>=8.4.2",
    "tqdm>=4.67.1",
    "ipykernel>=7.0.1",
    "numpy>=2.3.4",
    "einops>=0.8.1",
    "transformers>=4.57.1",
    "datasets==2.18.0",
    "tensorboard>=2.20.0",
    "accelerate>=1.10.1",
    "matplotlib>=3.10.7",
    "h-net-dynamic-chunking>=0.3.0",
    "flash-linear-attention>=0.4.0",
    "triton==3.2.0",
]

[tool.pyright]
typeCheckingMode = "basic"
ignore = ["**/*.ipynb*", "**/__pycache__", "test"]

[tool.pytest.ini_options]
testpaths = ["test"]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
# ROCm6 support relies on `pytorch-triton-rocm`, which should also be installed from the PyTorch index
# (and included in `project.dependencies`).
pytorch-triton-rocm = [
  { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
